--- a/pagina_inicial.html
+++ b/pagina_inicial.html
@@ -26,16 +26,17 @@
   <section class="banner">
   <img src="img/BANNER VITAL RECIFE (800 x 300 px).png" alt="Banner principal">
   </section>
+  <br>
+
+<h1>PROMOÇÕES DA SEMANA</h1>
 
 <section class="carrossel">
-
-    <h1>PROMOÇÕES DA SEMANA</h1> <br>
     <img src="img/1.png" alt="imagem 1">
     <img src="img/2.png" alt="imagem 2">
     <img src="img/3.png" alt="imagem 3">
     <img src="img/4.png" alt="imagem 4 ">
     <img src="img/5.png" alt="imagem 5">
-    <img src="img/6.png" alt="imagem 6 ">
+    
 
     </div>
     <br>
@@ -47,15 +48,21 @@
     <img src="img/BANNER SECUNDARIO.png" alt="Segundo banner">
   </section>
 
+  <h1> ESSENCIAIS </h1>
 
 <section class="carrossel">
-    <h1> ESSENCIAIS </h1> <br>
-    <div class="slideshow-container" id="essenciais-carrossel">
-        <div class="mySlides fade"><a href="#"><img src="img/11.png" alt="Imagem 11"></a></div>
-        <div class="mySlides fade"><a href="#"><img src="img/12.png" alt="Imagem 12"></a></div>
-        <div class="mySlides fade"><a href="#"><img src="img/13.png" alt="Imagem 13"></a></div>
+
+    <img src="img/14.png" alt="imagem 1">
+    <img src="img/13.png" alt="imagem 2">
+    <img src="img/6.png" alt="imagem 3">
+    <img src="img/8.png" alt="imagem 4 ">
+    <img src="img/10.png" alt="imagem 5">
+    
 
     </div>
+    <br>
+
+</section>
     <br>
 
    
