--- a/pagina_inicial.html
+++ b/pagina_inicial.html
@@ -21,7 +21,10 @@
       </ul>
     </nav>
   </header>
-
+    <div class="barra-pesquisa">
+        <input class="text" placeholder="Buscar produtos...">
+      <button type="submit">🔍</button>
+      </div>
   <!-- Banner Principal -->
   <section class="banner">
   <img src="img/BANNER VITAL RECIFE (800 x 300 px).png" alt="Banner principal">
