--- a/inicio.html
+++ b/inicio.html
@@ -3,8 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vital Recife</title>
-  <link rel="stylesheet" href="css/style_pagina_inicial.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+ <link rel="icon" href="img/VITAL RECIFE.png" type="image">
+<title>Vital Recife</title>
+  <link rel="stylesheet" href="css/inicio.css">
 </head>
 <body>
   <!-- Cabeçalho e Menu -->
@@ -12,19 +16,27 @@
     <div class="logo">
       <img src="img/logo_fundo.png" alt="Logo do site">
     </div>
+    <!--INICIO NAV-->
     <nav>
       <ul>
-        <li><a href="#">Início</a></li>
-        <li><a href="#">Sobre</a></li>
-        <li><a href="#">Serviços</a></li>
-        <li><a href="#">Contato</a></li>
+        <li><a href="inicio.html" class="ativo">INÍCIO</a></li>
+        <li><a href="serviço.html">SOBRE</a></li>
+        <li><a href="contato.html">CONTATO</a></li>
+        <li><a href="login.html"">LOGIN</a></li>
       </ul>
     </nav>
+    <!--FIM NAV-->
+<!--INICIO BARRA DE PESQUISA -->
+<!---
+      <div class="search-bar">
+    <input type="text" placeholder="Pesquisar...">
+    <button>🔍</button>
+  </div> 
+->
+  <!--FIM BARRA DE PESQUISA-->
+  
   </header>
-    <div class="barra-pesquisa">
-        <input class="text" placeholder="Buscar produtos...">
-      <button type="submit">🔍</button>
-      </div>
+
   <!-- Banner Principal -->
   <section class="banner">
   <img src="img/BANNER VITAL RECIFE (800 x 300 px).png" alt="Banner principal">
@@ -55,11 +67,11 @@
 
 <section class="carrossel">
 
-    <img src="img/14.png" alt="imagem 1">
-    <img src="img/13.png" alt="imagem 2">
-    <img src="img/6.png" alt="imagem 3">
-    <img src="img/8.png" alt="imagem 4 ">
-    <img src="img/10.png" alt="imagem 5">
+    <img src="img/whay.png" alt="imagem 1">
+    <img src="img/creatina.png" alt="imagem 2">
+    <img src="img/pretreino.png" alt="imagem 3">
+    <img src="img/glutamina.png" alt="imagem 4 ">
+    <img src="img/bcaa.png" alt="imagem 5">
     
 
     </div>
