--- a/metricas.html
+++ b/metricas.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/metricas.css">
 </head>
 <body>
+    <main>
     <header>
-       <div class="logo">VITAL SIGNS</div>
+       <div class="logo">
+        <img src="img/logo_fundo.png" alt="logo">
+       </div>
        <div class="header-box"></div>
     </header>
 
-    <main>
+    
         <h1>SEUS CLIENTES AMAM</h1>
          <div class="image-grid">
             <div class="image-grid"><img src="imagem 1"></div>
@@ -21,8 +25,20 @@
             <div class="image-grid"><img src="imagem 5"></div>
             <div class="image-grid"><img src="imagem 6"></div>
         </div>
-    </main>
+    
+    <div class="highlight-section">
+        <div class="highlight-box">
+            <img src="img/caixa1.png" alt="caixa1">
+    </div>
+    <div class="highlight-box">
+    <img src="img/caixa2.png" alt="caixa2">        
+    </div>
+</div>
 
+    <div class="banner">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam sapiente numquam consequuntur. Molestias suscipit nihil id asperiores sit debitis quos eius perspiciatis blanditiis accusamus, earum repudiandae eaque sapiente fuga et?</p>
+    </div>
+    </main>
     <footer></footer>
 </body>
 </html>
