--- a/cadastro.html
+++ b/cadastro.html
@@ -48,13 +48,11 @@
       <label for="confirma_senha">Confirmação de senha</label><br />
       <input type="password" id="confirma_senha" name="confirma_senha" minlength="6" required /><br /><br />
 
-      <button type="submit">Cadastrar</button>
+      <a href="metricas.html" class="btn-entrar">Entrar</a> <br><br><br>
     </fieldset>
   </form>
-  <br>
-  <br>
-  <br>
-  <br>
+  
+  
   
 
   <footer>
