--- a/login.html
+++ b/login.html
@@ -31,8 +31,7 @@
                 <label for="senha">Senha</label>
                 <input type="password" id="senha" placeholder="Digite sua senha" required>
             </div>
-
-            <button type="submit" class="btn-login">Entrar</button> <br> <br>
+             <a href="metricas.html" class="btn-login">Entrar</a> <br><br><br>
             <p class="mensagem">Não tem uma conta? <br> <a href="cadastro.html">Cadastre-se</a></p>
         </form>
     </div>
