--- a/metricas.html
+++ b/metricas.html
@@ -8,11 +8,20 @@
 </head>
 <body>
     <main>
-    <header>
-       <div class="logo">
-        <img src="img/logo_fundo.png" alt="logo">
-       </div>
-       <div class="header-box"></div>
+    <header class="top-header">
+        <div class="logo-area">
+            <img src="img/logo_fundo.png" alt="logo vital recife">
+        </div>
+
+        <div class="profile-area">
+            <h2>Olá, Emerson</h2>
+            <p>Nívelatual: Prata</p>
+            <div class="progress-bar">
+                <div class="progress" style="width: 65%;"></div>
+            </div>
+            <p>Faltam 35 pontos para o nível Ouro</p>
+            <p>Próxima campanha começa em: 12 Dias</p>
+        </div>
     </header>
 
     
@@ -33,7 +42,7 @@
     <div class="highlight-box">
     <img src="img/caixa2.png" alt="caixa2">        
     </div>
-</div>
+    </div>
 
     <div class="banner">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam sapiente numquam consequuntur. Molestias suscipit nihil id asperiores sit debitis quos eius perspiciatis blanditiis accusamus, earum repudiandae eaque sapiente fuga et?</p>
