--- a/metricas.html
+++ b/metricas.html
@@ -27,8 +27,16 @@
     <p>Próxima campanha começa em: <strong>12 Dias</strong></p>
   </div>
 </header>
+    <div class="highlight-section">
+        <div class="highlight-box">
+            <img src="img/metricas1 (1).png" alt="caixa1">
+    </div>
+    <div class="highlight-box">
+    <img src="img/metricas2.png" alt="caixa2">        
+    </div>
+    </div>
 
-    <section class="clientes-amam">
+        <section class="clientes-amam">
   <h1>SEUS CLIENTES AMAM</h1>
   <div class="image-grid">
     <div class="image-slot"><img src="img/imagem1.png" alt="Imagem 1"></div>
@@ -39,20 +47,9 @@
     <div class="image-slot"><img src="img/imagem6.png" alt="Imagem 6"></div>
   </div>
 </section>
-    
-    <div class="highlight-section">
-        <div class="highlight-box">
-            <img src="img/caixa1.png" alt="caixa1">
-    </div>
-    <div class="highlight-box">
-    <img src="img/caixa2.png" alt="caixa2">        
-    </div>
-    </div>
 
-    <div class="banner">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam sapiente numquam consequuntur. Molestias suscipit nihil id asperiores sit debitis quos eius perspiciatis blanditiis accusamus, earum repudiandae eaque sapiente fuga et?</p>
-    </div>
     <main></main>
-    <footer></footer>
 </body>
+
+    <footer></footer>
 </html>
