--- a/metricas.html
+++ b/metricas.html
@@ -19,21 +19,24 @@
     <p>Seja bem-vindo!</p>
     <p>Nome: <strong>Emerson de Andrade Batista Filho</strong></p>
     <p>Perfil: <strong>Associado</strong></p>
-    <p>Nível atual: <strong>Prata</strong></p>
     <div class="progress-bar">
       <div class="progress" style="width: 65%;"></div>
     </div>
+    <h3>Nível atual: <strong>Prata</strong></h3>
     <p>Faltam <strong>35 pontos</strong> para o nível Ouro</p>
-    <p>Próxima campanha começa em: <strong>12 Dias</strong></p>
-  </div>
+    <div class="button-container">
+  <button class="action">EDITAR PERFIL</button>
+</div>
+</div>
 </header>
+
     <div class="highlight-section">
         <div class="highlight-box">
             <img src="img/metricas1 (1).png" alt="caixa1">
-    </div>
-    <div class="highlight-box">
-    <img src="img/metricas2.png" alt="caixa2">        
-    </div>
+        </div>
+        <div class="highlight-box">
+            <img src="img/metricas2.png" alt="caixa2">        
+        </div>
     </div>
 
         <section class="clientes-amam">
@@ -47,9 +50,8 @@
     <div class="image-slot"><img src="img/imagem6.png" alt="Imagem 6"></div>
   </div>
 </section>
-
-    <main></main>
-</body>
-
-    <footer></footer>
+    <footer>
+        <p> Vital Recife © </p>
+    </footer>
+    </body>
 </html>
