--- a/inicio.html
+++ b/inicio.html
@@ -60,7 +60,7 @@
 
   <section class="banner">
     <h1>DESTAQUE DO MÊS </h1> <br>
-    <img src="img/BANNER SECUNDARIO.png" alt="Segundo banner">
+    <img src="img/bannerprinci2.png" alt="Segundo banner">
   </section>
 
   <h1> ESSENCIAIS </h1>
