--- a/metricas.html
+++ b/metricas.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Associados</title>
     <link rel="stylesheet" href="css/metricas.css">
+    <link rel="icon" href="img/VITAL RECIFE.png" type="image">
 </head>
 
 <body>
+
+   <div class="voltar-container">
+            <a href="inicio.html" class="btn-voltar">
+                 Voltar
+            </a>
+        </div>
 
 <header class="top-header">
   <div class="side-image">
@@ -42,12 +49,12 @@
         <section class="clientes-amam">
   <h1>SEUS CLIENTES AMAM</h1>
   <div class="image-grid">
-    <div class="image-slot"><img src="img/imagem1.png" alt="Imagem 1"></div>
-    <div class="image-slot"><img src="img/imagem2.png" alt="Imagem 2"></div>
-    <div class="image-slot"><img src="img/imagem3.png" alt="Imagem 3"></div>
-    <div class="image-slot"><img src="img/imagem4.png" alt="Imagem 4"></div>
-    <div class="image-slot"><img src="img/imagem5.png" alt="Imagem 5"></div>
-    <div class="image-slot"><img src="img/imagem6.png" alt="Imagem 6"></div>
+    <div class="image-slot"><img src="img/m1.png" alt="Imagem 1"></div>
+    <div class="image-slot"><img src="img/m2.png" alt="Imagem 2"></div>
+    <div class="image-slot"><img src="img/m3.png" alt="Imagem 3"></div>
+    <div class="image-slot"><img src="img/m4.png" alt="Imagem 4"></div>
+    <div class="image-slot"><img src="img/m5.png" alt="Imagem 5"></div>
+    <div class="image-slot"><img src="img/m6.png" alt="Imagem 6"></div>
   </div>
 </section>
     <footer>
