--- a/metricas.html
+++ b/metricas.html
@@ -12,7 +12,7 @@
 
    <div class="voltar-container">
             <a href="inicio.html" class="btn-voltar">
-                 Voltar
+                 Sair
             </a>
         </div>
 
