--- a/metricas.html
+++ b/metricas.html
@@ -58,7 +58,11 @@
   </div>
 </section>
     <footer>
-        <p> Vital Recife © </p>
+     <p>Rua da Vitalidade, 123 - Boa Viagem</p> <br><br>
+
+     <p>Recife/PE, 51020-000 | CNPJ: 00.123.456/0001-78 </p> <br> <br>
+     
+     <p>© 2025 Vital Recife. Todos os direitos reservados.</p>
     </footer>
     </body>
 </html>
